src/objects/Fee__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Causas__c</fullName>
        <label>Causas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Causa1</fullName>
                </value>
                <value>
                    <fullName>Causa2</fullName>
                </value>
                <value>
                    <fullName>Causa3</fullName>
                </value>
                <value>
                    <fullName>Causa4</fullName>
                </value>
                <value>
                    <fullName>Causa5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Picklist__c</fullName>
        <label>campo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>7</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Acme</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Queue_Test_Fee</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Test</label>
        <queue>Queue_Test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>